--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -16,18 +15,34 @@
         </nav>
     </header>
     <main>
+        <h2>Summary</h2>
+        <p>Aspiring Computer Science and Engineering student with a strong foundation in programming and problem-solving. Currently pursuing a Bachelor's degree in Computer Science and Engineering, with hands-on experience in software development, data structures, and algorithms. Proactive, detail-oriented, and passionate about technology, with a strong commitment to continuous learning and professional growth.</p>
+        
         <h2>Experience</h2>
         <ul>
-            <li><strong>Software Developer</strong> at XYZ Corp (2022-Present)</li>
-            <li><strong>Intern</strong> at ABC Ltd. (2021-2022)</li>
+            <li><strong>Student</strong> at Channabasaveshwara Institute of Technology, Gubbi (Nov 2022 - Present)</li>
+            <li>No prior work experience; currently pursuing Bachelor's studies in Computer Science.</li>
         </ul>
+
         <h2>Education</h2>
         <ul>
-            <li>Bachelor of Technology in Computer Science - 2021</li>
+            <li>Bachelor of Engineering - BE, Computer Engineering (2022 - Present)</li>
+            <li>Bishop Sargent School</li>
+        </ul>
+
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming</li>
+            <li>Computer Science</li>
+            <li>Debugging</li>
+            <li>Data Structures</li>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>Data Visualization</li>
         </ul>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Amith A N. All rights reserved.</p>
     </footer>
 </body>
 </html>
