--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+p<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
         
         <h2>Experience</h2>
         <ul>
-            <li><strong>Student</strong> at Channabasaveshwara Institute of Technology, Gubbi (Nov 2022 - Present)</li>
+            <li><strong>Student</strong> at Channabasaveshwara Institute of Technology, Gubbi (Nov 2022 - Ongoing)</li>
             <li>No prior work experience; currently pursuing Bachelor's studies in Computer Science.</li>
         </ul>
 
