--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <h2>About Me</h2>
-        <p>Hi, I'm <strong>Amith</strong>. Welcome to my personal website! I love creating unique and interactive designs.</p>
+        <p>Hi, I'm <strong>Amith</strong>. Welcome to my personal website! Here you can find my resume and bio-data.</p>
         <button onclick="alert('Thanks for visiting!')">Click Me!</button>
     </main>
     <footer>
