--- a/resume.html
+++ b/resume.html
@@ -33,8 +33,11 @@
         
             <p>Data Structures</p>
             <p>Python</p>
+            <p>Java</p>
+            <p>C</p>
             <p>SQL</p>
             <p>Data Visualization</p>
+            <p>DevOps</p>
         
     </main>
     <footer>
